Fixed Build.xml and updated readme